Revert "Hacked Tests"
This reverts commit 774ac25fd92200a47a9886bcb3a482b578b13b6d.